# protok

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  matmul.cpp  parallelfor.cpp
example/: CMakeLists.txt  example.cpp  example.ptk
include/: macros.h  protok.h
lib/: CMakeLists.txt  protok.cpp
